...
                app:menu="@menu/menu_main"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldTitle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:colorBackground"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">
...

                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldContent"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"

            android:isScrollContainer="true"
...
