<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.miomio.MainActivity">
    <item
        android:id="@+id/note_menu_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="@color/design_default_color_error"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>